--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,7 +1,3 @@
-{% extends 'learning_logs/base.html' %}
-
-{% block content %}
-    <p>学習ノートを使えば、好みのトピックについて学習していることを記録して、
-        いつも最新の状態を把握できます。</p>
-
-{% endblock content %}
+<p>学習ノート</p>
+<p>学習ノートを使えば、好みのトピックについて学習していることを記録して、
+    いつも最新の状態を把握できます。</p>
