index.htmlがbase.htmlを継承するように書き換え

--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -3,4 +3,6 @@
     <a href="{% url 'learning_logs:index' %}">学習ノート</a>
 </p>
 
-{% block content %}{% endblock content %}
+{% block content %}
+<!-- 継承先のページのcontentが挿入される -->
+{% endblock content %}
