--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -2,5 +2,14 @@
 
 {% block content %}
 
+    <p>トピック一覧</p>
+
+    <ul>
+        {% for topic in topics %}
+            <li>{{ topic.text }}</li>
+        {% empty %}
+            <li>トピックはまだ作成されていません。</li>
+        {% endfor %}
+    </ul>
 
 {% endblock content %}
