--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -2,18 +2,23 @@
 
 {% block content %}
 
-  <p>トピック: {{ topic.text }}</p>
+    <p>トピック: {{ topic.text }}</p>
 
-  <p>記事:</p>
-  <ul>
+    <p>記事:</p>
+
+    <p>
+        <a href="{% url 'learning_logs:new_entry' topic.id %}">新しい記事を追加</a>
+    </p>
+
+    <ul>
     {% for entry in entries %}
-      <li>
+        <li>
         <p>{{ entry.date_added|date:'Y年m月d日 H:i' }}</p>
         <p>{{ entry.text|linebreaks }}</p>
-      </li>
+        </li>
     {% empty %}
-      <li>このトピックにはまだ記事がありません。</li>
+        <li>このトピックにはまだ記事がありません。</li>
     {% endfor %}
-  </ul>
+    </ul>
 
 {% endblock content %}
