--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -16,7 +16,7 @@
         <p>{{ entry.date_added|date:'Y年m月d日 H:i' }}</p>
         <p>{{ entry.text|linebreaks }}</p>
         <p>
-            <a href="{% url 'learning_logs:edit_entry' entry.id %}">新しい記事を追加</a>
+            <a href="{% url 'learning_logs:edit_entry' entry.id %}">記事を編集</a>
         </p>
         </li>
     {% empty %}
