--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -2,6 +2,12 @@
     {# app_name:name #}
     <a href="{% url 'learning_logs:index' %}">学習ノート</a>
     <a href="{% url 'learning_logs:topics' %}">トピック一覧</a>
+    {% if user.is_authenticated %}
+        こんにちは {{ user.username }}さん
+    {% else %}
+        <a href="{% url 'accounts:register' %}">ユーザー登録</a> -
+        <a href="{% url 'accounts:login' %}">ログイン</a>
+    {% endif %}
 </p>
 
 {% block content %}
