--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -5,7 +5,7 @@
     {% if user.is_authenticated %}
         こんにちは {{ user.username }}さん
     {% else %}
-        <a href="{% url 'accounts:register' %}">ユーザー登録</a> -
+        {# <a href="{% url 'accounts:register' %}">ユーザー登録</a> - #}
         <a href="{% url 'accounts:login' %}">ログイン</a>
     {% endif %}
 </p>
